# python-basic

./: requirements.txt
homework_01/: main.py
homework_02/: README.md  __init__.py  base.py  car.py  engine.py  exceptions.py  plane.py
homework_03/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
homework_03/blog/: main.py  view.py
