[tool.poetry]
name = "homework-03"
version = "0.1.0"
description = "Docker контейнер c веб-приложением"
authors = [" Saab67 <said-abdusalamov@mail.ru>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.97.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
